Creating HTML content

--- a/TributePage.html
+++ b/TributePage.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tribute Page</title>
 </head>
 <body>
+    <main id="main">
+        <h1 id="title">Henri Bergson Tribute</h1>
+        <div id="img-div">
+            <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Henri_Bergson_02.jpg" alt="Henri Bergson">
+            <h4 id="image-caption">Henri Bergson's Photo</h4>
+            <section id="tribute-info">
+                <p>French philosopher who was awarded the Nobel Prize for Literature in 1927. 
+                    Bergson argued that the intuition is deeper than the intellect. 
+                    His Creative Evolution (1907) and Matter and Memory (1896) attempted to 
+                    integrate the findings of biological science with a theory of consciousness. 
+                    Bergson's work was considered the main challenge to the mechanistic view of nature. 
+                    He is sometimes claimed to have anticipated features of relativity theory and modern scientific theories of the mind. 
+                    Bertrand Russell, one of the most authoritative opponents of Bergson, 
+                    did not consider him a philosopher at all, but merely a mediocre poet.</p>
+            </section>
+            <a id="tribute-link" href="https://en.wikipedia.org/wiki/Henri_Bergson" target="_blank">Henri Bergson Additional Info</a>
+        </div>
+
+    </main>
     
 </body>
 </html>
