--- a/TributePage.html
+++ b/TributePage.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tribute Page</title>
-    <link rel="stylesheet" type="text/css" href="/static/style.css"
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 <body>
     <main id="main">
         <h1 id="title">Henri Bergson Tribute</h1>
         <div id="img-div">
             <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Henri_Bergson_02.jpg" alt="Henri Bergson">
-            <h4 id="image-caption">Henri Bergson's Photo</h4>
+            <p id="img-caption">Henri Bergson's Photo</p>
             <section id="tribute-info">
                 <p>French philosopher who was awarded the Nobel Prize for Literature in 1927. 
                     Bergson argued that the intuition is deeper than the intellect. 
@@ -25,8 +25,7 @@
             </section>
             <a id="tribute-link" href="https://en.wikipedia.org/wiki/Henri_Bergson" target="_blank">Henri Bergson Additional Info</a>
         </div>
-
     </main>
-    
+    <script src="/static/js/bundle.js"></script>
 </body>
 </html>
