--- a/SurveyForm.html
+++ b/SurveyForm.html
@@ -10,17 +10,17 @@
     <h1 id="title">SURVEY FORM</h1>
     <p id="description">Let us know how we can improve freeCodeCamp</p>
     <form id="survey-form">
-        <label for="name-label">Name:</label>
-        <input type="text" id="name-label" name="username" placeholder="User name">
+        <label for="name" id="name-label">Name:</label>
+        <input type="text" id="name" name="name" placeholder="User name" required>
         <br>
         <br>
-        <label for="email-label">Email:</label>
+        <label for="email" id="email-label">Email:</label>
         <!-- See link pattern https://www.w3schools.com/tags/att_input_pattern.asp-->
-        <input type="text" id="email-label" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="email user">
+        <input type="email" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="email user" required>
         <br>
         <br>
-        <label for="number-label">Number:</label>
-        <input id="number-label" type="number" name="number" min="1" max="5" placeholder="Number" >
+        <label for="number" id="number-label">Number:</label>
+        <input id="number" type="number" name="number" min="1" max="5" placeholder="Number" required>
         <br>
         <br>
         <label for="dropdown">Which option best describes your current role?</label>
