--- a/SurveyForm.html
+++ b/SurveyForm.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Survey Form</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/styleSurvey.css">
 </head>
 <body>
     <h1 id="title">SURVEY FORM</h1>
