Adding sections History Product and Events

--- a/LandingProductpage.html
+++ b/LandingProductpage.html
@@ -11,9 +11,9 @@
     <header id="header">
         <img id="header-img" src="https://www.coca-colacompany.com/content/dam/journey/us/en/private/brands/brands-package/coca-cola.rendition.300.270.jpg" alt="cocacola Logo">
         <nav id="nav-bar">
-            <a class="nav-link" href="#features">Features</a>
-            <a class="nav-link" href="#how-it-works">How it works</a>
-            <a class="nav-link" href="#pricing">Pricing</a>
+            <a class="nav-link" href="#history">History</a>
+            <a class="nav-link" href="#products">Products</a>
+            <a class="nav-link" href="#events">Events</a>
         </nav>
         <iframe id="video" width="500" height="315" src="https://www.youtube.com/embed/1VM2eLhvsSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <form id="form" action="https://www.freecodecamp.com/email-submit" method="POST">
@@ -22,6 +22,75 @@
             <input type="submit" id="submit" value="Send">
         </form>
     </header>
+    <section id="history">
+        <h3 id="title-historia">CocaCola's History</h3>
+        <p id="history-info">Coca-Cola history began in 1886 when the curiosity of an Atlanta pharmacist, Dr. John S. Pemberton, led him to create a distinctive tasting soft drink that could be sold at soda fountains. He created a flavored syrup, took it to his neighborhood pharmacy, where it was mixed with carbonated water and deemed “excellent” by those who sampled it. Dr. Pemberton’s partner and bookkeeper, Frank M. Robinson, is credited with naming the beverage “Coca‑Cola” as well as designing the trademarked, distinct script, still used today.</p>
+    </section>
+    <section id="products">
+        <h3 id="title-products">CocaCola's Products</h3>
+        <ul id="products-info"><li><a href="/w/index.php?title=Cafe_Zu&amp;action=edit&amp;redlink=1" class="new" title="Cafe Zu (page does not exist)">Cafe Zu</a> – Canned coffee with <a href="/wiki/Ginseng" title="Ginseng">ginseng</a> available in Thailand<sup id="cite_ref-virtualvender_10-7" class="reference"><a href="#cite_note-virtualvender-10">[10]</a></sup></li>
+            <li><a href="/w/index.php?title=Caffeine_Free_Barq%27s&amp;action=edit&amp;redlink=1" class="new" title="Caffeine Free Barq's (page does not exist)">Caffeine Free Barq's</a></li>
+            <li><a href="/wiki/Caffeine_Free_Coca-Cola" class="mw-redirect" title="Caffeine Free Coca-Cola">Caffeine Free Coca-Cola</a> – a caffeine free Coke. was included in 1983</li>
+            <li><a href="/w/index.php?title=Caffeine_Free_New_Coke&amp;action=edit&amp;redlink=1" class="new" title="Caffeine Free New Coke (page does not exist)">Caffeine Free New Coke</a> – the ill-fated caffeine-free Coke</li>
+            <li><a href="/w/index.php?title=Caffeine_Free_Diet_Coke&amp;action=edit&amp;redlink=1" class="new" title="Caffeine Free Diet Coke (page does not exist)">Caffeine Free Diet Coke</a>/<a href="/wiki/Coca-Cola_light" class="mw-redirect" title="Coca-Cola light">Coca-Cola light</a> – diet Coke with no caffeine</li>
+            <li><a href="/w/index.php?title=Cal_King&amp;action=edit&amp;redlink=1" class="new" title="Cal King (page does not exist)">Cal King</a> – Yogurt drink available in Japan<sup id="cite_ref-bobby_14-2" class="reference"><a href="#cite_note-bobby-14">[14]</a></sup></li>
+            <li><a href="/w/index.php?title=Calypso_(beverage)&amp;action=edit&amp;redlink=1" class="new" title="Calypso (beverage) (page does not exist)">Calypso</a><sup id="cite_ref-brandlist_13-12" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/w/index.php?title=Canning%27s&amp;action=edit&amp;redlink=1" class="new" title="Canning's (page does not exist)">Canning's</a> – fruit-flavoured soft drink available in Trinidad &amp; Tobago. Rebadged version of <a href="/wiki/Fanta" title="Fanta">Fanta</a>.<sup id="cite_ref-virtualvender_10-8" class="reference"><a href="#cite_note-virtualvender-10">[10]</a></sup></li>
+            <li><a href="/wiki/Cappy_(juice)" title="Cappy (juice)">Cappy</a> – juice drink available in some parts of Europe and the <a href="/wiki/Palestinian_Territories" class="mw-redirect" title="Palestinian Territories">Palestinian Territories</a><sup id="cite_ref-virtualvender_10-9" class="reference"><a href="#cite_note-virtualvender-10">[10]</a></sup></li>
+            <li><a href="/w/index.php?title=Caprice_(beverage)&amp;action=edit&amp;redlink=1" class="new" title="Caprice (beverage) (page does not exist)">Caprice</a><sup id="cite_ref-brandlist_13-13" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/wiki/Capri_Sun" title="Capri Sun">Capri Sun</a><sup id="cite_ref-brandlist_13-14" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/wiki/Carioca" title="Carioca">Carioca</a><sup id="cite_ref-brandlist_13-15" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/w/index.php?title=Carver%27s&amp;action=edit&amp;redlink=1" class="new" title="Carver's (page does not exist)">Carver's</a><sup id="cite_ref-brandlist_13-16" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li>Cascal<sup id="cite_ref-brandlist_13-17" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/w/index.php?title=Cepita_(juice)&amp;action=edit&amp;redlink=1" class="new" title="Cepita (juice) (page does not exist)">Cepita del valle</a> – juice drink available in Argentina<sup id="cite_ref-virtualvender_10-10" class="reference"><a href="#cite_note-virtualvender-10">[10]</a></sup></li>
+            <li><a href="/w/index.php?title=Chaho&amp;action=edit&amp;redlink=1" class="new" title="Chaho (page does not exist)">Chaho</a><sup id="cite_ref-2003_brands_6-3" class="reference"><a href="#cite_note-2003_brands-6">[6]</a></sup></li>
+            <li><a href="/wiki/Charrua" class="mw-redirect" title="Charrua">Charrua</a><sup id="cite_ref-brandlist_13-18" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/wiki/Chaudfontaine" title="Chaudfontaine">Chaudfontaine</a> – mineral water available in the Netherlands and Belgium<sup id="cite_ref-bobby_14-3" class="reference"><a href="#cite_note-bobby-14">[14]</a></sup></li>
+            <li><a href="/w/index.php?title=Chaywa&amp;action=edit&amp;redlink=1" class="new" title="Chaywa (page does not exist)">Chaywa</a> – coffee sold at gas stations by means of vending machines across South Africa<sup id="cite_ref-17" class="reference"><a href="#cite_note-17">[17]</a></sup></li>
+            <li><a href="/w/index.php?title=Cheers_(soda)&amp;action=edit&amp;redlink=1" class="new" title="Cheers (soda) (page does not exist)">Cheers</a> – fruit-flavoured soft drink available in Philippines<sup id="cite_ref-virtualvender_10-11" class="reference"><a href="#cite_note-virtualvender-10">[10]</a></sup></li>
+            <li><a href="/wiki/Cherry_Coke" class="mw-redirect" title="Cherry Coke">Cherry Coke</a> – cherry-flavored Coca-Cola</li>
+            <li><a href="/w/index.php?title=Chinotto_(Venezuelan_soft_drink)&amp;action=edit&amp;redlink=1" class="new" title="Chinotto (Venezuelan soft drink) (page does not exist)">Chinotto</a> – lemon-lime-flavored soft drink available in Venezuela. see <a href="/wiki/Sprite_(soft_drink)" class="mw-redirect" title="Sprite (soft drink)">Sprite</a>.<sup id="cite_ref-brandlist_13-19" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/w/index.php?title=Chinotto_light&amp;action=edit&amp;redlink=1" class="new" title="Chinotto light (page does not exist)">Chinotto light</a><sup id="cite_ref-brandlist_13-20" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/wiki/Chippewa" class="mw-redirect" title="Chippewa">Chippewa</a><sup id="cite_ref-2003_brands_6-4" class="reference"><a href="#cite_note-2003_brands-6">[6]</a></sup></li>
+            <li><a href="/wiki/Chivalry" title="Chivalry">Chivalry</a> – fruit soda available in China<sup id="cite_ref-18" class="reference"><a href="#cite_note-18">[18]</a></sup></li>
+            <li><a href="/wiki/Ciel_(beverage)" title="Ciel (beverage)">Ciel</a> – Purified, noncarbonated bottled water available in Angola, Mexico, and Morocco<sup id="cite_ref-virtualvender_10-12" class="reference"><a href="#cite_note-virtualvender-10">[10]</a></sup></li>
+            <li><a href="/wiki/Ciel_(beverage)" title="Ciel (beverage)">Ciel+</a> – flavoured water available in Mexico<sup id="cite_ref-virtualvender_10-13" class="reference"><a href="#cite_note-virtualvender-10">[10]</a></sup></li>
+            <li>Citra – later <a href="/wiki/Fanta_Citrus" title="Fanta Citrus">Fanta Citrus</a>. Grapefruit-flavored soft drink</li>
+            <li><a href="/wiki/Club_soda" title="Club soda">Club</a><sup id="cite_ref-brandlist_13-21" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/wiki/Coca-Cola" title="Coca-Cola">Coca-Cola</a> – Namesake Coca-Cola product</li>
+            <li><a href="/wiki/Coca-Cola_Bl%C4%81K" title="Coca-Cola BlāK">Coca-Cola BlāK</a> – Coca-Cola with <a href="/wiki/Coffee" title="Coffee">coffee</a> flavor added</li>
+            <li><a href="/wiki/Coca-Cola_Black_Cherry_Vanilla" title="Coca-Cola Black Cherry Vanilla">Coca-Cola Black Cherry Vanilla</a> – Replaced with <a href="/wiki/Coca-Cola_Vanilla" title="Coca-Cola Vanilla">Coca-Cola Vanilla</a> in 2007</li>
+            <li><a href="/wiki/Coca-Cola_C2" title="Coca-Cola C2">Coca-Cola C2</a> – discontinued lo-carb and low sugar version</li>
+            <li><a href="/w/index.php?title=Coca-Cola_California_Raspberry&amp;action=edit&amp;redlink=1" class="new" title="Coca-Cola California Raspberry (page does not exist)">Coca-Cola California Raspberry</a> – Released 2018, a naturally flavored variant of Coca-Cola sweetened with cane sugar.</li>
+            <li><a href="/wiki/Coca-Cola_Citra" title="Coca-Cola Citra">Coca-Cola Citra</a> – a citrus cola, available only in Japan</li>
+            <li><a href="/wiki/Coca-Cola_Clear" title="Coca-Cola Clear">Coca-Cola Clear</a> – a clear cola, available in Japan</li>
+            <li><a href="/w/index.php?title=Coca-Cola_Energy&amp;action=edit&amp;redlink=1" class="new" title="Coca-Cola Energy (page does not exist)">Coca-Cola Energy</a> Energy Drink, available in the United Kingdom</li>
+            <li><a href="/w/index.php?title=Coca-Cola_Georgia_Peach&amp;action=edit&amp;redlink=1" class="new" title="Coca-Cola Georgia Peach (page does not exist)">Coca-Cola Georgia Peach</a> – Released 2018, a naturally flavored variant of Coca-Cola sweetened with cane sugar.</li>
+            <li><a href="/wiki/Coca-Cola_Life" title="Coca-Cola Life">Coca-Cola Life</a> – a cola with less sugar and sweetened with cane sugar and stevia</li>
+            <li><a href="/wiki/Coca-Cola_Light" class="mw-redirect" title="Coca-Cola Light">Coca-Cola Light</a> (see <a href="/wiki/Diet_Coke" title="Diet Coke">Diet Coke</a>)</li>
+            <li><a href="/wiki/Coca-Cola_with_Lemon" title="Coca-Cola with Lemon">Coca-Cola with Lemon</a> 2005 Limited edition, available only some places in Europe</li>
+            <li><a href="/wiki/Coca-Cola_with_Lime" title="Coca-Cola with Lime">Coca-Cola with Lime</a> – lime-flavored Coke</li>
+            <li><a href="/w/index.php?title=Coca-Cola_with_No_Calories_and_with_Sweeteners_from_the_Plant_Stevia&amp;action=edit&amp;redlink=1" class="new" title="Coca-Cola with No Calories and with Sweeteners from the Plant Stevia (page does not exist)">Coca-Cola with No Calories and with Sweeteners from the Plant Stevia</a> – a cola with no calories and sweetened with stevia extracts. Currently available in <a href="/wiki/Greece" title="Greece">Greece</a></li>
+            <li><a href="/wiki/Coca-Cola_Raspberry" title="Coca-Cola Raspberry">Coca-Cola Raspberry</a> a test marketed raspberry-flavored Coke. Only in Finland and New Zealand</li>
+            <li><a href="/w/index.php?title=Coca-Cola_Stevia_No_Sugar&amp;action=edit&amp;redlink=1" class="new" title="Coca-Cola Stevia No Sugar (page does not exist)">Coca-Cola Stevia No Sugar</a> – a test product as a replacement for Coca-Cola Life. Launched only in New Zealand in 2018.<sup id="cite_ref-19" class="reference"><a href="#cite_note-19">[19]</a></sup></li>
+            <li><a href="/wiki/Coca-Cola_Orange" title="Coca-Cola Orange">Coca-Cola Orange</a> – 2007 limited edition, available only in the UK</li>
+            <li><a href="/w/index.php?title=Coca-Cola_Orange_Vanilla&amp;action=edit&amp;redlink=1" class="new" title="Coca-Cola Orange Vanilla (page does not exist)">Coca-Cola Orange Vanilla</a> – Released 2019 - the zero sugar version was also released.</li>
+            <li><a href="/wiki/Coca-Cola_Zero_Sugar" title="Coca-Cola Zero Sugar">Coca-Cola Zero Sugar</a> – diet version of Coca-Cola, sister product of <a href="/wiki/Diet_Coke" title="Diet Coke">Diet Coke</a></li>
+            <li><a href="/w/index.php?title=Cocoteen&amp;action=edit&amp;redlink=1" class="new" title="Cocoteen (page does not exist)">Cocoteen</a><sup id="cite_ref-brandlist_13-22" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/wiki/New_Coke" title="New Coke">Coke II</a> Re-formulated Coca-Cola, replaced original formula Coca-Cola as "New Coke" for a brief time in 1985. Re-branded Coke II in 1992. Discontinued ca. 2002.</li>
+            <li><a href="/w/index.php?title=Colette_Cola&amp;action=edit&amp;redlink=1" class="new" title="Colette Cola (page does not exist)">Colette Cola</a> – discontinued, was only available in the <a href="/wiki/East_Germany" title="East Germany">German Democratic Republic</a></li>
+            <li><a href="/wiki/Costa_Coffee" title="Costa Coffee">Costa Coffee</a> – British coffee chain</li>
+            <li><a href="/wiki/Cresta_(soft_drink)" title="Cresta (soft drink)">Cresta</a><sup id="cite_ref-brandlist_13-23" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup></li>
+            <li><a href="/w/index.php?title=Cristal_(water)&amp;action=edit&amp;redlink=1" class="new" title="Cristal (water) (page does not exist)">Cristal</a> – <a href="/wiki/Mineral_water" title="Mineral water">mineral water</a></li>
+            <li><a href="/wiki/Crush_(beverage)" class="mw-redirect" title="Crush (beverage)">Crush</a> – <a href="/wiki/Peru" title="Peru">Peru</a></li>
+            <li><a href="/wiki/Cumberland_Gap" title="Cumberland Gap">Cumberland Gap</a><sup id="cite_ref-2003_brands_6-5" class="reference"><a href="#cite_note-2003_brands-6">[6]</a></sup></li>
+            <li><a href="/w/index.php?title=Crystal_(bottled_water)&amp;action=edit&amp;redlink=1" class="new" title="Crystal (bottled water) (page does not exist)">Crystal</a><sup id="cite_ref-brandlist_13-24" class="reference"><a href="#cite_note-brandlist-13">[13]</a></sup><sup id="cite_ref-20" class="reference"><a href="#cite_note-20">[20]</a></sup></li></ul>
+    </section>
+    <section id="events">
+        <h3 id="title-events">CocaCola's Events</h3>
+        <img id="img-event1" src="https://www.cocacola.ie/content/dam/GO/CokeZone/Ireland/BikeScheme_Banner800x654.jpg" alt="get-pedaling-with-cocacola">
+        <p id="Event1">Event: Get pedalling with coca cola</p>
+    </section>
     <script src="/static/js/bundle.js"></script>
 </body>
 </html>
