--- a/LandingProductpage.html
+++ b/LandingProductpage.html
@@ -9,18 +9,20 @@
 </head>
 <body>
     <header id="header">
-        <img id="header-img" src="https://www.coca-colacompany.com/content/dam/journey/us/en/private/brands/brands-package/coca-cola.rendition.300.270.jpg" alt="cocacola Logo">
         <nav id="nav-bar">
-            <a class="nav-link" href="#history">History</a>
-            <a class="nav-link" href="#products">Products</a>
-            <a class="nav-link" href="#events">Events</a>
+                <a class="nav-link" href="#history">History</a>
+                <a class="nav-link" href="#products">Products</a>
+                <a class="nav-link" href="#events">Events</a>
         </nav>
-        <iframe id="video" width="500" height="315" src="https://www.youtube.com/embed/1VM2eLhvsSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <form id="form" action="https://www.freecodecamp.com/email-submit" method="POST">
-            <label for="email" id="email-label">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email">
-            <input type="submit" id="submit" value="Send">
-        </form>
+        <div id="flex-header">
+            <img id="header-img" src="https://www.coca-colacompany.com/content/dam/journey/us/en/private/brands/brands-package/coca-cola.rendition.300.270.jpg" alt="cocacola Logo">
+            <iframe id="video" width="500" height="315" src="https://www.youtube.com/embed/1VM2eLhvsSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <form id="form" action="https://www.freecodecamp.com/email-submit" method="POST">
+                <label for="email" id="email-label">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email">
+                <input type="submit" id="submit" value="Send">
+            </form>
+        </div>
     </header>
     <section id="history">
         <h3 id="title-historia">CocaCola's History</h3>
@@ -88,8 +90,10 @@
     </section>
     <section id="events">
         <h3 id="title-events">CocaCola's Events</h3>
-        <img id="img-event1" src="https://www.cocacola.ie/content/dam/GO/CokeZone/Ireland/BikeScheme_Banner800x654.jpg" alt="get-pedaling-with-cocacola">
-        <p id="Event1">Event: Get pedalling with coca cola</p>
+        <div id="events-info">
+            <img id="img-event1" src="https://www.cocacola.ie/content/dam/GO/CokeZone/Ireland/BikeScheme_Banner800x654.jpg" alt="get-pedaling-with-cocacola">
+            <p id="event1">Event: Get pedalling with coca cola</p>
+        </div>
     </section>
     <script src="/static/js/bundle.js"></script>
 </body>
