Completing Test cases and adding some style

--- a/PersonalPortfolioWebpage.html
+++ b/PersonalPortfolioWebpage.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Personal PortFolio</title>
+    <link type="text/css" rel="stylesheet" href="/static/css/portfoliostyle.css">
 </head>
 <body>
     <section id="welcome-section">
-        <h1>Johan Tinjaca's Personal Portfolio</h1>
+        <h1 id="name">Johan Tinjaca's Personal Portfolio</h1>
     </section>
     <nav id="navbar">
         <a id="nav-link" href="#presentation">Presentation</a>
@@ -16,16 +17,17 @@
         <a id="nav-link" href="#contact">Contact</a>
     </nav>
     <section id="presentation">
+        <p>IT Engineer</p>
 
     </section>
     <section id="projects">
-        <div id="project-tile">
+        <div class="project-tile">
             <a id="project-link" href="http://127.0.0.1:5500/LandingProductpage.html" target="_blank">Landing Product Page</a>
         </div>
-        <div id="project-tile">
+        <div class="project-tile">
             <a id="project-link" href="http://127.0.0.1:5500/TributePage.html" target="_blank">Tribute Page</a>
         </div>
-        <div id="project-tile">
+        <div class="project-tile">
             <a id="project-link" href="http://127.0.0.1:5500/SurveyForm.html" target="_blank">Survey Form</a>
         </div>
     </section>
@@ -33,6 +35,6 @@
         <a id="profile-link" href="https://github.com/jstiven01" target="_blank">GitHub Profile</a>
 
     </section>
-    
+    <script src="/static/js/bundle.js"></script>
 </body>
 </html>
